k8s/namespace.yaml
# Defining Namespace, Logical isolation of the application
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
  labels:
    istio-injection: enabled
