k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-test-pod
  namespace: todo-app
  labels:
    sidecar.istio.io/inject: "false"
spec:
  containers:
    - name: test-container
      image: busybox:1.36
      command: ["sleep", "3600"]   # Keep alive so you can exec into it
      volumeMounts:
        - name: persistent-data
          mountPath: /data          # Where the PVC is mounted inside the pod
      resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
  volumes:
    - name: persistent-data
      persistentVolumeClaim:
        claimName: todo-app-pvc   # Must match metadata.name in pvc.yaml
  restartPolicy: OnFailure
