k8s/app.yaml
# Persistant Volume Clain (PVC), not to be used in statefulset
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   name: sqlite-pvc
#   namespace: todo-app
# spec:
#   accessModes:
#     - ReadWriteOnce # here, 'Once' means volume can only be attached with one node at a time. Replacable with Many
#   resources:
#     requests:
#       storage: 1Gi

# Headless service: required for StatefulSet stable DNS indentity
apiVersion: v1
kind: Service
metadata:
  name: todo-app-headless
  namespace: todo-app
spec:
  clusterIP: None
  selector:
    app: todo-app
  ports:
  - port: 8080
    targetPort: 8080

# Application deployment -> Changed to StatefulSet from deployment
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP

---
# Application NodePort Service
apiVersion: v1
kind: Service
metadata:
  name: todo-app-nodeport
  namespace: todo-app
spec:
  selector:
    app: todo-app
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080 # nodeport must be between 30000-32767

---
# Application LoadBalancer service
apiVersion: v1
kind: Service
metadata:
  name: todo-app-loadbalancer
  namespace: todo-app
spec:
  selector:
    app: todo-app
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
